# src/models.ts
@@ -1,4 +1,4 @@
-import {Sequelize, DataTypes, InferAttributes, InferCreationAttributes, Model} from 'sequelize';
+import {Sequelize, DataTypes, InferAttributes, InferCreationAttributes, Model, CreationOptional} from 'sequelize';
 import {RuleCriteria} from './ruling/ruling-system';
 
 // Models are a little leaky, because they depend on sequelize
@@ -19,11 +19,26 @@ export type EthereumTransactionLookupFields = {
 export class Rule extends Model<InferAttributes<Rule>, InferCreationAttributes<Rule>> {
     declare id: number;
     declare active: boolean;
+    declare delay: number;
     declare criteria: RuleCriteria;
 }
 
 export class EthereumTransaction extends Model<InferAttributes<EthereumTransaction>, InferCreationAttributes<EthereumTransaction>> {
-    declare id: string;
+    declare id: number;
+    declare blockHash: string;
+    declare blockNumber: bigint;
+    declare from: string;
+    declare gasPrice: bigint;
+    declare hash: string;
+    declare to: string;
+    declare transactionIndex: bigint;
+    declare type: bigint;
+    declare value: bigint;
+}
+
+export class PendingEthereumTransaction extends Model<InferAttributes<PendingEthereumTransaction>, InferCreationAttributes<PendingEthereumTransaction>> {
+    declare id: number;
+    declare blockDeadline: bigint;
     declare blockHash: string;
     declare blockNumber: bigint;
     declare from: string;
@@ -39,13 +54,14 @@ export async function setupModels(sequelize: Sequelize) {
     Rule.init({
         id: {type: DataTypes.INTEGER, primaryKey: true, autoIncrement: true },
         active: {type: DataTypes.BOOLEAN, allowNull: false},
+        delay: {type: DataTypes.INTEGER, allowNull: false},
         criteria: {type: DataTypes.JSON}
     }, {sequelize});
 
     EthereumTransaction.init({
         id: {type: DataTypes.INTEGER, primaryKey: true, autoIncrement: true },
         blockHash: {type: DataTypes.STRING},
-        blockNumber: {type: DataTypes.STRING},
+        blockNumber: {type: DataTypes.BIGINT},
         from: {type: DataTypes.STRING},
         gasPrice: {type: DataTypes.BIGINT},
         hash: {type: DataTypes.STRING},
@@ -62,11 +78,30 @@ export async function setupModels(sequelize: Sequelize) {
         sequelize
     });
 
-    // FIXME: Empty criteria logs everything
+    PendingEthereumTransaction.init({
+        id: {type: DataTypes.INTEGER, primaryKey: true, autoIncrement: true },
+        blockDeadline: {type: DataTypes.BIGINT },
+        blockHash: {type: DataTypes.STRING},
+        blockNumber: {type: DataTypes.BIGINT},
+        from: {type: DataTypes.STRING},
+        gasPrice: {type: DataTypes.BIGINT},
+        hash: {type: DataTypes.STRING},
+        to: {type: DataTypes.STRING},
+        transactionIndex: {type: DataTypes.BIGINT},
+        type: {type: DataTypes.BIGINT},
+        value: {type: DataTypes.BIGINT},
+    }, {
+        indexes: [
+            { fields: ['blockDeadline'] },
+        ],
+        sequelize
+    });
 
+    // We don't need this on the pending transactions. In fact it causes clashes with the other id column
+    // PendingEthereumTransaction.removeAttribute('id');
+
+    PendingEthereumTransaction.belongsTo(Rule, { onDelete: 'CASCADE', foreignKey: { name:'ruleId', allowNull: false } });
     EthereumTransaction.belongsTo(Rule, { onDelete: 'CASCADE', foreignKey: { name:'ruleId', allowNull: false } });
 
-    await EthereumTransaction.sync({force: true});
-    await Rule.sync({force: true});
-
+    await sequelize.sync();
 }
